# opencv-test

./: .gitignore  CMakeLists.txt  README.md
src/testing/: colour-edge-detection.cpp  colour-edge-detection.hpp  display.cpp  display.hpp
